# openJuice

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  Design_Document.typ  LICENCE.md  Makefile  QuickCMakeBuild.java  README.md  build.sh  conanfile.txt  doxygen-config  graph.dot  quick-cmake-build.py  vcpkg-configuration.json  vcpkg.json  xmake.lua
ftxui/: CMakeLists.txt  external.cppm
sdl/: CMakeLists.txt  sdl.cppm
sfml/: CMakeLists.txt
sfml/window/: GlResource.cppm
src/: CMakeLists.txt  Main.cpp  main.cpp
src/board/: CMakeLists.txt  board.cpp  board.cppm  board.hpp  boards.cpp  boards.cppm  boards.hpp  graph.hpp  graph.tpp  panel.cpp  panel.cppm
src/card/: Cards.cppm  HyperCardFactory.cppm  HyperCards.cppm  StandardCardFactory.cppm  StandardCards.cppm
src/card/cards/: ProtagonistsPrivilege.cppm
src/card/hyper/: Accelerator.cppm  HyperMode.cppm  ProtagonistsPrivilege.cppm  Ubiquitous.cppm  X16BigRocket.cppm
src/card/standard/: BaseCards.cppm
src/cards/: battlecard.hpp  binder.cpp  binder.hpp  boostcard.hpp  card.hpp  event.hpp  eventcard.hpp  giftcard.hpp  trapcard.hpp
src/character/: character.hpp  characters.hpp
src/character/characters/: kai.hpp  marc.hpp  qp.hpp  suguri.hpp
src/chat/: Censor.cppm  Chat.cppm  ChatClient.cppm  ChatServer.cppm  ChatSession.cppm
src/engine/board/: Board.cppm  BoardInfo.cppm  BoardLibrary.cppm  Boards.cppm  Panel.cppm
src/engine/card/: Card.cppm  CardFactory.cppm  CardTypes.cppm  SpawnTypes.cppm
src/engine/entities/: BasicEnemy.cppm  BossEnemy.cppm  Character.cppm  Enemy.cppm
src/engine/entity/: Actor.cppm  BasicEnemy.cppm  BossEnemy.cppm  Character.cppm  Enemy.cppm  Entity.cppm  Mob.cppm  Player.cppm
src/engine/game/: Dice.cppm  Engine.cppm  EntityComponentSystem.cppm  FiniteStateMachine.cppm  Game.cppm
src/engine/managers/: GlobalSettings.cppm  ProfileManager.cppm  TextManager.cppm
src/engine/signals/: Observer.cppm
src/engine/ui/: CommandLineInterface.cppm  TextUserInterface.cppm  UserInterface.cppm
src/engine/unit/: BasicEnemy.cppm  BossEnemy.cppm  Character.cppm  Enemy.cppm  Unit.cppm  UnitFactory.cppm
src/engine/utility/: Colours.cppm  Debug.cppm  DebugLogger.cppm  EngineUtility.cppm  Exceptions.cppm  GameInfo.cppm  GlobalSettings.cppm  InputParser.cppm  Interfaces.cppm  Language.cppm  Messages.cppm  Primitives.cppm  Random.cppm  RandomNumberGenerator.cppm  TimeFormat.cppm  Utility.cppm
src/entities/: Bosses.cppm  Characters.cppm  Enemies.cppm
src/entities/bosses/: FlyingCastle.cppm  ShifuRobot.cppm  StoreManager.cppm
src/entities/characters/: Kai.cppm  Marc.cppm  MariePoppo.cppm  QP.cppm  Suguri.cppm
src/entities/enemies/: Chicken.cppm  RoboBall.cppm  Seagull.cppm
src/entity/: Bosses.cppm  Characters.cppm  Enemies.cppm
src/entity/bosses/: FlyingCastle.cppm  ShifuRobot.cppm  StoreManager.cppm
src/entity/characters/: Kai.cppm  Marc.cppm  MariePoppo.cppm  QP.cppm  Suguri.cppm
src/entity/enemies/: Chicken.cppm  RoboBall.cppm  Seagull.cppm
src/error/: exceptions.hpp
src/game/: game.cpp  game.cppm  game.hpp
src/player/: player.hpp
src/player/characters/: kai.hpp
src/unit/: BasicEnemies.cppm  BasicEnemyFactory.cppm  BossEnemies.cppm  BossEnemyFactory.cppm  Bosses.cppm  CharacterFactory.cppm  Characters.cppm  Enemies.cppm
src/unit/bosses/: FlyingCastle.cppm  ShifuRobot.cppm  StoreManager.cppm
src/unit/characters/: Kai.cppm  Marc.cppm  MariePoppo.cppm  QP.cppm  Suguri.cppm
src/unit/enemies/: Chicken.cppm  RoboBall.cppm  Seagull.cppm
src/utility/: CMakeLists.txt  colours.cppm  debug.cpp  debug.cppm  inputparser.cpp  inputparser.cppm  observer.cpp  observer.hpp  primitives.cppm  subject.cpp  subject.hpp  utility.cpp  utility.cppm  windowsize.cpp
stdlib/: CMakeLists.txt  algorithm.cppm  collections.cppm  concurrency.cppm  core.cppm  fmt.cppm  fs.cppm  io.cppm  math.cppm  mem.cppm  net.cppm  os.cppm  ranges.cppm  sys.cppm  text.cppm  time.cppm  util.cppm
stdlib/algorithm/: Algorithm.cppm  CStdLib.cppm  Numeric.cppm
stdlib/collections/: Array.cppm  BitSet.cppm  Deque.cppm  ForwardList.cppm  IntegerSequence.cppm  List.cppm  Map.cppm  Pair.cppm  Queue.cppm  Set.cppm  Stack.cppm  Tuple.cppm  UnorderedMap.cppm  UnorderedSet.cppm  ValArray.cppm  Vector.cppm
stdlib/concurrency/: Atomic.cppm  Barrier.cppm  ConditionVariable.cppm  Coroutine.cppm  Future.cppm  Latch.cppm  Mutex.cppm  Semaphore.cppm  SharedMutex.cppm  StopToken.cppm  Thread.cppm
stdlib/core/: Any.cppm  CStdDef.cppm  Compare.cppm  Concepts.cppm  Exception.cppm  Exceptions.cppm  Execution.cppm  Expected.cppm  Functional.cppm  InitializerList.cppm  Limits.cppm  Optional.cppm  Primitives.cppm  String.cppm  Variant.cppm
stdlib/fmt/: CIntTypes.cppm  CIntTypesConstants.cppm  CharConv.cppm  Format.cppm
stdlib/fs/: FileSystem.cppm
stdlib/io/: CStdIO.cppm  CWChar.cppm  FStream.cppm  IOManip.cppm  IOS.cppm  IOStream.cppm  IStream.cppm  OStream.cppm  Print.cppm  SStream.cppm  SpanStream.cppm  StreamBuf.cppm  SyncStream.cppm
stdlib/math/: Bit.cppm  CMath.cppm  Complex.cppm  Numbers.cppm  Numeric.cppm  Random.cppm  Ratio.cppm
stdlib/mem/: CStdLib.cppm  Memory.cppm  MemoryResource.cppm  New.cppm  ScopedAllocator.cppm
stdlib/net/: Buffer.cppm  Executor.cppm  IOContext.cppm  Internet.cppm  Socket.cppm  Timer.cppm
stdlib/os/: Unix.cppm  Win32.cppm
stdlib/os/unix/: AIO.cppm  ARPA.cppm  DLFCn.cppm  DirEnt.cppm  FCntl.cppm  FTW.cppm  FmtMsg.cppm  FnMatch.cppm  Glob.cppm  Grp.cppm  IConv.cppm  LangInfo.cppm  LibGen.cppm  MQueue.cppm  Monetary.cppm  NDBM.cppm  NLTypes.cppm  Net.cppm  NetDB.cppm  NetINet.cppm  PThread.cppm  Pwd.cppm  RegEx.cppm  Sched.cppm  Search.cppm  Semaphore.cppm  Spawn.cppm  (+7 more)
stdlib/ranges/: Algorithm.cppm  Functional.cppm  Generator.cppm  Iterator.cppm  Memory.cppm  Ranges.cppm
stdlib/sys/: CSetJmp.cppm  CSignal.cppm  CSignalConstants.cppm  CStdLib.cppm  SystemError.cppm
stdlib/text/: CString.cppm  Regex.cppm  String.cppm  StringView.cppm
stdlib/time/: CTime.cppm  Chrono.cppm
stdlib/util/: StackTrace.cppm  TypeIndex.cppm  TypeInfo.cppm  Utility.cppm
tomlpp/: CMakeLists.txt  tomlpp.cppm
(+525 files in other folders)
